add descriptions to rumoured items

--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -44,13 +44,11 @@
 	<div class="ui container">
 		<section id="upcomingList">
 			<div class="ui large header">Unconfirmed / Rumoured / Unknown Dates</div>
-			<div class="ui middle aligned celled list stackable two column grid">
-			<!-- <div class="ui stackable two column grid"> -->
+			<div class="ui top aligned celled list stackable two column grid">
 			{{#each unconfirmedMovies}}
 				{{> unconfirmedMovie }}
 			{{/each}}
 			</div>
-			<!-- </div> -->
 		</section>
 	</div>
 {{> footer }}
