--- a/client/views/movie/movie.html
+++ b/client/views/movie/movie.html
@@ -27,7 +27,7 @@
 				  		<div class="header">
 				  			{{title}}
 				  		</div>
-				  		<div class="meta">{{releaseDate}}</div>
+				  		<div class="meta">{{ release }}</div>
 				  		<div class="description">
 				    		<p>{{description}}</p>
 				  		</div>
