--- a/client/views/layout.css
+++ b/client/views/layout.css
@@ -2,10 +2,41 @@ html, body {
   font-size: 16px;
 }
 
-.ui.inverted.header {
-    color: #ececec;
+.extra-padding {
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
+.right-padding {
+    padding-right: 40px;
+}
+
+#calendar {
+    background-color: white;
+    opacity: 0.9;
+/*    margin: 10px;
+    padding: 10px;
+*/}
+
+#calendar-share-button {
+    float: right;
+}
+
+/*.ui.segment.megaphone {
+    background: url("marvel.jpg"), no-repeat;
+    background-size: cover;
+}*/
+/*
+.ui.segment.megaphone h1 {
+    color: black;
+    text-shadow: 2px 2px #000000;
+    margin-top: -1em;
+}*/
+
+/*.ui.inverted.header {
+    color: #ececec;
+}
+*/
 .orion-bootstrap-admin img {
     max-width: 2.5em;
 }
@@ -36,9 +67,9 @@ a:hover {
     height: 2.25em;
 }
 
-.card {
+/*.card {
   box-shadow: none !important;
-}
+}*/
 
 div.ui.items>.item>.image:not(.ui) {
     width: 45px;
