--- a/client/views/movie/movie.html
+++ b/client/views/movie/movie.html
@@ -1,7 +1,7 @@
 <template name="movie">
 	<div class="ui stackable two column grid">
 		<div class="row">
-			<div class="ui blurring image column" style="flex-grow: 1; background-color: black;">
+			<div class="ui blurring image column" style="padding: 0; flex-grow: 1;">
 				<div class="ui dimmer">
 				  <div class="content">
 				    <div class="center">
@@ -20,31 +20,28 @@
 				<img class="ui fluid dimmable image" src={{banner.url}}>
 			</div>
 
-			<div class="column">
-				<div class="ui fluid card">
-					<div class="content">
-				  		<img class="right floated avatar large ui image" src={{logo.url}}>
-				  		<div class="header">
-				  			{{title}}
-				  		</div>
-				  		<div class="meta">{{ release }}</div>
-				  		<div class="description">
-				    		<p>{{description}}</p>
-				  		</div>
-				  		<div class="extra content">
-					    	{{#if studio}}
-					      	<div class="ui bottom left floated item">{{studio}}</div>
-							{{/if}}
-							{{#if trakt}}
-							<div class="ui bottom right floated item"><a href={{trakt}} target="_blank">trakt<i class="right chevron icon"></i></a></div>
-							{{/if}}
-					    </div>
-					</div>
+			<div class="ui fluid card">
+				<div class="content">
+			  		<img class="right floated avatar large ui image" src={{logo.url}}>
+			  		<div class="header">
+			  			{{title}}
+			  		</div>
+			  		<div class="meta">{{ release }}</div>
+			  		<div class="description">
+			    		<p>{{description}}</p>
+			  		</div>
+			  		<div class="extra content">
+				    	{{#if studio}}
+				      	<div class="ui bottom left floated item">{{studio}}</div>
+						{{/if}}
+						{{#if trakt}}
+						<div class="ui bottom right floated item"><a href={{trakt}} target="_blank">trakt<i class="right chevron icon"></i></a></div>
+						{{/if}}
+				    </div>
 				</div>
 			</div>
 		</div>
 	</div>
-<div class="ui section divider"></div>
 </template>
 
 <template name="upcomingMovie">
