--- a/client/views/post/post.html
+++ b/client/views/post/post.html
@@ -1,5 +1,5 @@
 <template name="post">
-	<div class="ui segment">
+	<div class="ui segment" id="{{_id}}">
 		<h1 class="ui header">{{title}}</h1>
 		<h4 class="ui dividing header">{{writtenBy}} on {{date}}</h4>
 		<p></p>
@@ -7,3 +7,7 @@
 	</div>
 	<div class="ui horizontal divider"></div>
 </template>
+
+
+
+
