--- a/client/views/layout.css
+++ b/client/views/layout.css
@@ -7,6 +7,29 @@ html, body {
     margin: 60px 0px;
 }
 
+.ui.horizontal.inverted.divider {
+    margin: 3em 10em;
+}
+
+.ui.equal.width.grid.container {
+    margin-bottom: 8em;
+}
+
+#marvelbutton {
+    margin-right: 10px;
+}
+
+#infotext {
+    margin-bottom: 2em;
+}
+
+.masthead h1.ui.header {
+    margin-top: 2em;
+    margin-bottom: 2em;
+    font-size: 2em;
+    font-weight: normal;
+}
+
 #currentList.header {
     text-align: right; 
     margin-bottom: 25px;
